docs: accurate trace claim, DATA_DIR-aware backup (local and in-container), quick start env for the server
- admin.md: only dependency failures (503) write a failure trace.
- ops.md: the backup command reads DATA_DIR and writes DATA_DIR/backups;
  an uberjar variant for the container (verified locally with the jar).
- README quick start exports CORPUS_DIR/DATA_DIR once so the server sees
  the same corpus as bb ingest.
- deploy.yml comment no longer says data/.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>